# RustyWeather

./: Cargo.toml  README.md  package.json  tauri.conf.json
frontend/: README.md  bun.lockb  codux.config.json  index.html  package-lock.json  package.json
frontend/src/: App.module.scss  App.tsx  index.css  main.tsx
frontend/src/_codux/: boards-global-setup.ts
frontend/src/_codux/boards/app/: app.board.tsx
frontend/src/_codux/boards/form-card/: contact-us.board.tsx  sign-in.board.tsx  sign-up.board.tsx
frontend/src/_codux/boards/gift-card/: gift-card-image-overlay.board.tsx  gift-card.board.module.scss  gift-card.board.tsx
frontend/src/_codux/boards/mini-cards/: mini-cards-alternative-callout-text.board.tsx  mini-cards-danger.board.tsx  mini-cards-successful.board.tsx  mini-cards-warning.board.tsx  mini-cards.board.tsx
frontend/src/_codux/boards/product-item/: espresso-macchiato.board.tsx  matcha-tea-favorite.board.tsx  (+2 more)
frontend/src/components/form-card/: form-card.module.scss  form-card.tsx
frontend/src/components/gift-card/: gift-card.module.scss  gift-card.tsx
frontend/src/components/mini-cards/: mini-cards.module.scss  mini-cards.tsx
frontend/src/components/product-item/: product-item.module.scss  product-item.tsx
frontend/src/components/subdetail-bar/: subdetail-bar.module.scss  subdetail-bar.tsx
frontend/src/components/sun-time/: sun-time.module.scss  sun-time.tsx
frontend/src/components/weather-details/: weather-details.module.scss  weather-details.tsx
frontend/src/globals/: colors.module.scss  letterSizes.module.scss
src/: main.rs
(+6 files in other folders)
