[package]
name = "WeatherApp"
description = "A weather app built with Tauri"
version = "0.1.0"
authors = ["UFifty50sh"]
license = "Apache-2.0"
homepage = "https://UFifty50.rf.gd/"
edition = "2021"
repository = "https://github.com/UFifty50/RustyWeather"
rust-version = "1.60"

[[bin]]
name = "WeatherApp"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
